--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,59 @@
 </head>
 <body>
 <h1>Welcome</h1>
-<form name='f' action="/fileUpload" method='POST'>
-</form>
+
+<div class="container">
+    <form name='f' enctype="multipart/form-data" action="/fileUpload" method='POST'>
+        <h2> Choose the action you want to perform </h2>
+
+
+        <input type="radio" name="options" id="uploadAction" onchange="checkSelection()"> Upload new data
+        <input type="radio" name="options" id="browseAction" onchange="checkSelection()"> Consult existing data
+
+        <div th:if="${message}">
+            <h2 th:text="${message}"/>
+        </div>
+
+        <div hidden id="uploadForm">
+            <table id="uploadTable" style="border-collapse: separate; border-spacing:0 10px;">
+                <tr>
+                    <td><input type="file" id="input" name="file" accept=".csv" onchange="checkFileName(this);" required/>
+                    </td>
+                </tr>
+                <tr>
+                    <td><input type="submit" id="upload" value="Upload" disabled/></td>
+                </tr>
+            </table>
+        </div>
+
+        <div hidden id="browseTable">
+            <p> nothing here build controller to retrieve data</p>
+        </div>
+    </form>
+</div>
 </body>
+<script type="text/javascript">
+    function checkFileName(sender) {
+        var fullPath = sender.value;
+        var fileName = fullPath.replace(/^.*[\\\/]/, '');
+        var extension = fileName.substring(fileName.lastIndexOf('.') + 1);
+        if (extension !== "csv") {
+            document.getElementById("upload").disabled = true;
+            document.getElementById("input").value = null;
+            alert("Selected file should have '.csv' extension" + fileName.toString());
+        } else {
+            document.getElementById("upload").disabled = false;
+        }
+    }
+
+    function checkSelection() {
+        if (document.getElementById("uploadAction").checked == true) {
+            document.getElementById("uploadForm").hidden = false;
+            document.getElementById("browseTable").hidden = true;
+        } else {
+            document.getElementById("uploadForm").hidden = true;
+            document.getElementById("browseTable").hidden = false;
+        }
+    }
+</script>
 </html>
